--- a/new.html
+++ b/new.html
@@ -18,7 +18,7 @@ button {
 <body style="background:cornsilk">
 <br><br><br><br>
 <center>
-<a href="schoolfree.html"><button>GET 1 FREE PRODUCT</button></a>
+<a href="schoolfree.html" target="_parent"><button>GET 1 FREE PRODUCT</button></a>
 <br><br><br><br>
 <a href="school.html" target="iframe_ex"><button  style="background:blue;color:white;">BUY PRODUCT</button>
 </center>
