--- a/home2.html
+++ b/home2.html
@@ -22,10 +22,10 @@
 </center>
         <ul style="list-style: none;display: flex;">
             <li><a href="schoolfree.html" target="iframe_ex" style="text-decoration: none;color: white;padding:10px 20px;">School Supplies</a></li>
-            <li><a href="schoolfree.html" target="iframe_ex" style="text-decoration: none;color: white;padding:10px 20px;">Home & Fashion</a></li>
-            <li><a href="schoolfree.html" target="iframe_ex" style="text-decoration: none;color: white;padding:10px 20px;">Accessories</a></li>
-            <li><a href="schoolfree.html" target="iframe_ex" style="text-decoration: none;color: white;padding:10px 20px;">Health & Beauty</a></li>
-            <li><a href="schoolfree.html" target="iframe_ex" style="text-decoration: none;color: white;padding:10px 20px;">Other Services</a></li>
+            <li><a href="accessoriesfree.html" target="iframe_ex" style="text-decoration: none;color: white;padding:10px 20px;">Home & Fashion</a></li>
+            <li><a href="accessoriesfree.html" target="iframe_ex" style="text-decoration: none;color: white;padding:10px 20px;">Accessories</a></li>
+            <li><a href="healthbeautyfree.html" target="iframe_ex" style="text-decoration: none;color: white;padding:10px 20px;">Health & Beauty</a></li>
+            <li><a href="accessoriesfree.html" target="iframe_ex" style="text-decoration: none;color: white;padding:10px 20px;">Other Services</a></li>
         </ul>
     </nav>
 </header>
