--- a/new.html
+++ b/new.html
@@ -107,7 +107,7 @@ body {
 <div style="width:100%;">
 <br><br><br>
 <center>
-<a href="home2.html" target="_parent"><button>GET 1 FREE PRODUCT</button></a>
+<a href="home2.html" target="_parent" style="color:black;"><button>GET 1 FREE PRODUCT</button></a>
 <br><br><br><br>
 <a href="school.html" target="iframe_ex"><button  style="background:blue;color:white;">BUY PRODUCT</button>
 </center>
