--- a/new.html
+++ b/new.html
@@ -94,14 +94,14 @@ body {
 </style>
 <body style="background:cornsilk">
 <div class="carousel" style="width:100%;">
-    <img src="slides/Slide1.jpg" alt="Image 1">
-    <img src="slides/Slide2.jpg" alt="Image 2">
-    <img src="slides/Slide3.jpg" alt="Image 3">
-    <img src="slides/Slide4.jpg" alt="Image 4">
-    <img src="slides/Slide5.jpg" alt="Image 5">
-    <img src="slides/Slide6.jpg" alt="Image 6">
-    <img src="slides/Slide7.jpg" alt="Image 7">
-    <img src="slides/Slide8.jpg" alt="Image 8">
+    <img src="slides/Slide1.JPG" alt="Image 1">
+    <img src="slides/Slide2.JPG" alt="Image 2">
+    <img src="slides/Slide3.JPG" alt="Image 3">
+    <img src="slides/Slide4.JPG" alt="Image 4">
+    <img src="slides/Slide5.JPG" alt="Image 5">
+    <img src="slides/Slide6.JPG" alt="Image 6">
+    <img src="slides/Slide7.JPG" alt="Image 7">
+    <img src="slides/Slide8.JPG" alt="Image 8">
   </div>
 
 <div style="width:100%;">
