--- a/healthbeauty.html
+++ b/healthbeauty.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: violet;
+            background-color: skyblue;
         }
         header {
             background-color: cornsilk;
