--- a/new.html
+++ b/new.html
@@ -519,6 +519,196 @@
         </div>
 
 
+    <!-- Product 44 -->
+        <div class="product">
+            <img src="images1/stnana.jpg" alt="Product 1">
+            <h3>Nana (Sticker)</h3>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-44">5</span></p>
+            <input type="number" id="qty-product-44" min="1" max="5" value="1">
+            <button id="btn-product-44" onclick="addToCart('Nana (Sticker)', 4, 44)">Add to Cart</button>
+            <button id="cancel-product-44" onclick="cancelFromCart(44)" disabled>Cancel</button>
+        </div>
+        <!-- Product 45 -->
+        <div class="product">
+            <img src="images1/stgat.jpg" alt="Product 2">
+            <h3>Gatotkaca (Sticker)</h3>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-45">5</span></p>
+            <input type="number" id="qty-product-45" min="1" max="5" value="1">
+            <button id="btn-product-45" onclick="addToCart('Gatotkaca (Sticker)', 4, 45)">Add to Cart</button>
+            <button id="cancel-product-45" onclick="cancelFromCart(45)" disabled>Cancel</button>
+        </div>
+<!-- Product 46 -->
+        <div class="product">
+            <img src="images1/stgus.jpg" alt="Product 3">
+            <h3>Gusion (Sticker)</h3>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-46">5</span></p>
+            <input type="number" id="qty-product-46" min="1" max="5" value="1">
+            <button id="btn-product-46" onclick="addToCart('Gusion (Sticker)', 4, 46)">Add to Cart</button>
+            <button id="cancel-product-46" onclick="cancelFromCart(46)" disabled>Cancel</button>
+        </div>
+
+   <!-- Product 47 -->
+        <div class="product">
+            <img src="images1/stmiya.jpg" alt="Product 1">
+            <h3>Miya (Sticker)</h3>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-47">5</span></p>
+            <input type="number" id="qty-product-47" min="1" max="5" value="1">
+            <button id="btn-product-47" onclick="addToCart('Miya (Sticker)', 4, 47)">Add to Cart</button>
+            <button id="cancel-product-47" onclick="cancelFromCart(47)" disabled>Cancel</button>
+        </div>
+        <!-- Product 48 -->
+        <div class="product">
+            <img src="images1/staraw.jpg" alt="Product 2">
+            <h3>Sticker 1</h3>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-48">5</span></p>
+            <input type="number" id="qty-product-48" min="1" max="5" value="1">
+            <button id="btn-product-48" onclick="addToCart('Sticker 1', 4, 48)">Add to Cart</button>
+            <button id="cancel-product-48" onclick="cancelFromCart(48)" disabled>Cancel</button>
+        </div>
+<!-- Product 49 -->
+        <div class="product">
+            <img src="images1/stboy.png" alt="Product 3">
+            <h3>Sticker 2</h3>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-49">5</span></p>
+            <input type="number" id="qty-product-49" min="1" max="5" value="1">
+            <button id="btn-product-49" onclick="addToCart('Sticker 2', 4, 49)">Add to Cart</button>
+            <button id="cancel-product-49" onclick="cancelFromCart(49)" disabled>Cancel</button>
+        </div>
+
+<!-- Product 50 -->
+        <div class="product">
+            <img src="images1/steng2.jpg" alt="Product 3">
+            <h3>Sticker 3</h3>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-50">5</span></p>
+            <input type="number" id="qty-product-50" min="1" max="5" value="1">
+            <button id="btn-product-50" onclick="addToCart('Sticker 3', 4, 50)">Add to Cart</button>
+            <button id="cancel-product-50" onclick="cancelFromCart(50)" disabled>Cancel</button>
+        </div>
+
+<!-- Product 51 -->
+        <div class="product">
+            <img src="images1/stlnhs.png" alt="Product 3">
+            <h3>Sticker 4</h3>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-51">5</span></p>
+            <input type="number" id="qty-product-51" min="1" max="5" value="1">
+            <button id="btn-product-51" onclick="addToCart('Sticker 4', 4, 51)">Add to Cart</button>
+            <button id="cancel-product-51" onclick="cancelFromCart(51)" disabled>Cancel</button>
+        </div>
+
+<!-- Product 52 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/lunox.jpg">
+            <h3>Sticker 5</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-52">10</span></p>
+            <input type="number" id="qty-product-52" min="1" max="10" value="1">
+            <button id="btn-product-52" onclick="addToCart('Sticker 5', 4, 52)">Add to Cart</button>
+            <button id="cancel-product-52" onclick="cancelFromCart(52)" disabled>Cancel</button>
+        </div> 
+
+<!-- Product 53 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/luoyi.jpg">
+            <h3>Sticker 6</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-53">10</span></p>
+            <input type="number" id="qty-product-53" min="1" max="10" value="1">
+            <button id="btn-product-53" onclick="addToCart('Sticker 6', 4, 53)">Add to Cart</button>
+            <button id="cancel-product-53" onclick="cancelFromCart(53)" disabled>Cancel</button>
+        </div> 
+
+<!-- Product 54 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/gusion2.jpg">
+            <h3>Sticker 7</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-54">10</span></p>
+            <input type="number" id="qty-product-54" min="1" max="10" value="1">
+            <button id="btn-product-54" onclick="addToCart('Sticker 7', 4, 54)">Add to Cart</button>
+            <button id="cancel-product-54" onclick="cancelFromCart(54)" disabled>Cancel</button>
+        </div> 
+<!-- Product 55 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/granger2.jpg">
+            <h3>Sticker 8</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-55">10</span></p>
+            <input type="number" id="qty-product-55" min="1" max="10" value="1">
+            <button id="btn-product-55" onclick="addToCart('Sticker 8', 4, 55)">Add to Cart</button>
+            <button id="cancel-product-55" onclick="cancelFromCart(55)" disabled>Cancel</button>
+        </div> 
+<!-- Product 56 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/granger.jpg">
+            <h3>Sticker 9</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-56">10</span></p>
+            <input type="number" id="qty-product-56" min="1" max="10" value="1">
+            <button id="btn-product-56" onclick="addToCart('Sticker 9', 4, 56)">Add to Cart</button>
+            <button id="cancel-product-56" onclick="cancelFromCart(56)" disabled>Cancel</button>
+        </div> 
+<!-- Product 57 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/chou.jpg">
+            <h3>Sticker 10</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-57">10</span></p>
+            <input type="number" id="qty-product-57" min="1" max="10" value="1">
+            <button id="btn-product-57" onclick="addToCart('Sticker 10', 4, 57)">Add to Cart</button>
+            <button id="cancel-product-57" onclick="cancelFromCart(57)" disabled>Cancel</button>
+        </div> 
+<!-- Product 58 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/vale.jpg">
+            <h3>Sticker 11</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-58">10</span></p>
+            <input type="number" id="qty-product-58" min="1" max="10" value="1">
+            <button id="btn-product-58" onclick="addToCart('Sticker 11', 4, 58)">Add to Cart</button>
+            <button id="cancel-product-58" onclick="cancelFromCart(58)" disabled>Cancel</button>
+        </div> 
+<!-- Product 59 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/ling.jpg">
+            <h3>Sticker 12</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-59">10</span></p>
+            <input type="number" id="qty-product-59" min="1" max="10" value="1">
+            <button id="btn-product-59" onclick="addToCart('Sticker 12', 4, 59)">Add to Cart</button>
+            <button id="cancel-product-59" onclick="cancelFromCart(59)" disabled>Cancel</button>
+        </div> 
+<!-- Product 60 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/hayabusa2.jpg">
+            <h3>Sticker 13</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-60">10</span></p>
+            <input type="number" id="qty-product-60" min="1" max="10" value="1">
+            <button id="btn-product-60" onclick="addToCart('Sticker 13', 4, 60)">Add to Cart</button>
+            <button id="cancel-product-60" onclick="cancelFromCart(60)" disabled>Cancel</button>
+        </div> 
+
+
+
+
+
 
 
 
@@ -580,7 +770,8 @@
         let totalPrice = 0;
         let stocks = { 1: 10, 2: 10, 3: 5, 4:4, 5:2, 6:10, 7:10, 8:3, 9:3, 10:3,
 			 11:5, 12:5, 13:5, 14:5, 15:5, 16:5, 17:50, 18:50, 19:25, 20:0,
-			20:0, 21:0, 22:0, 23:0, 24:0, 25:0, 26:0,27:10, 28:10, 29:10, 30:10, 31:10,32:10, 33:10, }; // Initial stock levels
+			20:0, 21:0, 22:0, 23:0, 24:0, 25:0, 26:0,27:10, 28:10, 29:10, 30:10, 31:10,32:10, 33:10,
+			44:5, 45:5, 46:5, 47:5, 48:5, 49:5, 50:5, 51:5,52:5, 52:10, 53:10, 54:10, 55:10, 56:10, 57:10, 58:10, 59:10, 60:10, }; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
