--- a/new.html
+++ b/new.html
@@ -705,6 +705,116 @@
             <button id="cancel-product-60" onclick="cancelFromCart(60)" disabled>Cancel</button>
         </div> 
 
+<!-- Product 61 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/hayabusa.jpg">
+            <h3>Sticker 14</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-61">10</span></p>
+            <input type="number" id="qty-product-61" min="1" max="10" value="1">
+            <button id="btn-product-61" onclick="addToCart('Sticker 14', 4, 61)">Add to Cart</button>
+            <button id="cancel-product-61" onclick="cancelFromCart(61)" disabled>Cancel</button>
+        </div>
+<!-- Product 62 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/miya3.jpg">
+            <h3>Sticker 15</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-62">10</span></p>
+            <input type="number" id="qty-product-62" min="1" max="10" value="1">
+            <button id="btn-product-62" onclick="addToCart('Sticker 15', 4, 62)">Add to Cart</button>
+            <button id="cancel-product-62" onclick="cancelFromCart(62)" disabled>Cancel</button>
+        </div>
+<!-- Product 63 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/mllogo.jpg">
+            <h3>Sticker 16</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-63">10</span></p>
+            <input type="number" id="qty-product-63" min="1" max="10" value="1">
+            <button id="btn-product-63" onclick="addToCart('Sticker 16', 4, 63)">Add to Cart</button>
+            <button id="cancel-product-63" onclick="cancelFromCart(63)" disabled>Cancel</button>
+        </div>
+<!-- Product 64 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/tigreal2.jpg">
+            <h3>Sticker 17</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-64">10</span></p>
+            <input type="number" id="qty-product-64" min="1" max="10" value="1">
+            <button id="btn-product-64" onclick="addToCart('Sticker 17', 4, 64)">Add to Cart</button>
+            <button id="cancel-product-64" onclick="cancelFromCart(64)" disabled>Cancel</button>
+        </div>
+<!-- Product 65 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/nana2.jpg">
+            <h3>Sticker 18</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-65">10</span></p>
+            <input type="number" id="qty-product-65" min="1" max="10" value="1">
+            <button id="btn-product-65" onclick="addToCart('Sticker 18', 4, 65)">Add to Cart</button>
+            <button id="cancel-product-65" onclick="cancelFromCart(65)" disabled>Cancel</button>
+        </div>
+<!-- Product 66 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/tigreal.jpg">
+            <h3>Sticker 19</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-66">10</span></p>
+            <input type="number" id="qty-product-66" min="1" max="10" value="1">
+            <button id="btn-product-66" onclick="addToCart('Sticker 19', 4, 66)">Add to Cart</button>
+            <button id="cancel-product-66" onclick="cancelFromCart(66)" disabled>Cancel</button>
+        </div>
+<!-- Product 67 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/aurora2.jpg">
+            <h3>Sticker 20</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-67">10</span></p>
+            <input type="number" id="qty-product-67" min="1" max="10" value="1">
+            <button id="btn-product-67" onclick="addToCart('Sticker 20', 4, 67)">Add to Cart</button>
+            <button id="cancel-product-67" onclick="cancelFromCart(67)" disabled>Cancel</button>
+        </div>
+<!-- Product 68 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/dyrroth.jpg">
+            <h3>Sticker 21</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-68">10</span></p>
+            <input type="number" id="qty-product-68" min="1" max="10" value="1">
+            <button id="btn-product-68" onclick="addToCart('Sticker 21', 4, 68)">Add to Cart</button>
+            <button id="cancel-product-68" onclick="cancelFromCart(68)" disabled>Cancel</button>
+        </div>
+<!-- Product 69 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/miya2.jpg">
+            <h3>Sticker 22</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-69">10</span></p>
+            <input type="number" id="qty-product-69" min="1" max="10" value="1">
+            <button id="btn-product-69" onclick="addToCart('Sticker 22', 4, 69)">Add to Cart</button>
+            <button id="cancel-product-69" onclick="cancelFromCart(69)" disabled>Cancel</button>
+        </div>
+<!-- Product 70 -->
+        <div class="product" style="line-height:0.5;">
+            <img src="images1/zhuxin.jpg">
+            <h3>Sticker 23</h3>
+		<p style="color:black;font-size:80%;">(1/8 of A4 Size)</p>
+            <p>₱4.00</p>
+            <p>Stock: <span id="stock-product-70">10</span></p>
+            <input type="number" id="qty-product-70" min="1" max="10" value="1">
+            <button id="btn-product-70" onclick="addToCart('Sticker 23', 4, 70)">Add to Cart</button>
+            <button id="cancel-product-70" onclick="cancelFromCart(70)" disabled>Cancel</button>
+        </div>
 
 
 
@@ -771,7 +881,8 @@
         let stocks = { 1: 10, 2: 10, 3: 5, 4:4, 5:2, 6:10, 7:10, 8:3, 9:3, 10:3,
 			 11:5, 12:5, 13:5, 14:5, 15:5, 16:5, 17:50, 18:50, 19:25, 20:0,
 			20:0, 21:0, 22:0, 23:0, 24:0, 25:0, 26:0,27:10, 28:10, 29:10, 30:10, 31:10,32:10, 33:10,
-			44:5, 45:5, 46:5, 47:5, 48:5, 49:5, 50:5, 51:5,52:5, 52:10, 53:10, 54:10, 55:10, 56:10, 57:10, 58:10, 59:10, 60:10, }; // Initial stock levels
+			44:5, 45:5, 46:5, 47:5, 48:5, 49:5, 50:5, 51:5,52:5, 52:10, 53:10, 54:10, 55:10, 56:10, 57:10, 58:10, 59:10, 60:10,
+			61:10, 62:10,63:10, 64:10,65:10, 66:10,67:10, 68:10,69:10, 70:10, }; // Initial stock levels
 
         function addToCart(productName, price, productId) {
             const qtyInput = document.getElementById(`qty-product-${productId}`);
